# MegaSquirtTacho

./: CMakeLists.txt  MegaSquirtTacho.c  MegaSquirtTacho.cpp  README.md  megasquirt_simplified_dash_broadcast.c  megasquirt_simplified_dash_broadcast.h  quickcal.ods
